src/objects/Children__c.object
<CustomObject>
    <fields>
        <fullName>Child_s_Birthday__c</fullName>
        <label>Child&apos;s Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_s_Interest_1__c</fullName>
        <label>Child&apos;s Interest #1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_s_Interest_2__c</fullName>
        <label>Child&apos;s Interest #2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_s_Parent__c</fullName>
        <label>Child&apos;s Parent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_s_Sex__c</fullName>
        <label>Child&apos;s Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Children</label>
    <nameField>
        <label>Child First and Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>